@@ -1,5 +1,11 @@
 2006-02-18  Emfox Zhou  <emfoxzhou@gmail.com>
 
+	* src/mainframe.h,
+	src/view/telnetview.cpp,
+	src/mainframe.cpp: Add runtime Mouse Support switch.
+
+2006-02-18  Emfox Zhou  <emfoxzhou@gmail.com>
+
 	* src/mainframe.cpp: Oops, missing translations and bot icons, added.
 
 2006-02-18  Emfox Zhou  <emfoxzhou@gmail.com>
